# deep-search

./: ARCHITECTURE.md  Makefile  README.md  app.py  config.py  mcp_server.py  pyproject.toml
data/chroma_db/: chroma.sqlite3
src/agent/: constants.py  graph.py  planner.py  reflector.py  searcher.py  state.py  synthesizer.py
src/agent/prompts/: __init__.py  planner.json  reflector.json  synthesizer.json
src/evaluation/: benchmark.py  llm_judge.py  metrics.py
src/evaluation/prompts/: __init__.py  planner_judge.json  reflector_judge.json  synthesizer_judge.json
src/ingestion/: chunker.py  pdf_parser.py  vector_store.py
src/models/: model_registry.py
tests/: conftest.py  test_agent_nodes.py  test_chunker.py  test_metrics.py  test_model_registry.py  test_prompts.py
